--- a/practica1/evento.html
+++ b/practica1/evento.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Trail Blazers vs 76ers</title>
-        <link rel="stylesheet" href="./estilo.css"/>
+        <title>Viajes</title>
+        <link rel="stylesheet" href="./evento.css"/>
+        <link rel="stylesheet" href="./comun.css"/>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
-        <header id="cabecera">
-            <img id="imagenCabecera" src="./logotipoNBA.jpg" alt="Logotipo de la NBA"/>
-            <h1>Partidos NBA</h1>
-
-            <table id="navegacion">
-                <tr>
-                    <td class="elemento">Noticias</td>
-                    <td class="elemento">Clasificación</td>
-                    <td class="elemento">Equipos</td>
-                </tr>
-            </table>
+        <header class="borde" id="cabecera">
+            <img id="imagenAvion" src="avion.jpg" alt="Logotipo de la agencia de viajes"/>
+            <h1 id="cabeceraPrincipal">Viajes</h1>
+            <ul id="menuCabecera">
+                <li class="elementoMenu">Viaja</li>
+                <li class="elementoMenu">Tus vuelos</li>
+                <li class="elementoMenu">Antes de viajar</li>
+            </ul>
         </header>
 
-        <aside>
-            <div id="seccionesAuxiliares">
-                <div class="seccion">
-                    Jugadores
-                </div>
-                <div class="seccion">
-                    Equipos
-                </div>
-                <div class="seccion">
-                    Estadísticas
-                </div>
-                <div class="seccion">
-                    Fechas claves
-                </div>
-            </div>
-        </aside>
-
         <section id="principal">
-            <h1>Trail Blazers vs 76ers</h1>
-            <h2>NBA</h2>
-            <h3>23/02/2019</h3>
-            <h4>x</h4>
+            <nav class="borde" id="navegacionLateral">
+                <ul id="listaLateral">
+                    <li class="elementoLateral">Check-in</li>
+                    <li class="elementoLateral">Tus reservas</li>
+                    <li class="elementoLateral">Estados vuelos</li>
+                </ul>
+            </nav>
+
+            <section class="borde" id="descripcion">
+                <section id="contenidoDesc">
+                    <h2 class="contenidoDesc" id="tituloEvento">Título del evento</h2>
+                    <h3 class="contenidoDesc" id="organizadorEvento">Organizador</h3>
+                    <h4 class="contenidoDesc" id="fechaEvento">Fecha</h4>
+                    <p class="contenidoDesc">Descripción aquí</p>
+                </section>
+                <section id="imagenes">
+                    <img class="imagenes" id="imagen1" src="fotoEvento1.jpeg" alt="Foto descriptiva número 1"/>
+                    <img class="imagenes" id="imagen2" src="fotoEvento2.jpg" alt="Foto descriptiva número 2"/>
+                </section>
+            </section>
         </section>
 
-        <footer id="pie">
-            <p>&copy; NBA</p>
+        <footer class="borde">
+            <div id="pie">&copy; 2019 SIBW</div>
         </footer>
     </body>
 </html>
