--- a/practica1/principal.html
+++ b/practica1/principal.html
@@ -1,87 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Partidos NBA</title>
-        <link rel="stylesheet" href="./estilo.css"/>
+        <title>Viajes</title>
+        <link rel="stylesheet" href="./principal.css"/>
+        <link rel="stylesheet" href="./comun.css"/>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
-
-        <header id="cabecera">
-            <img id="imagenCabecera" src="./logotipoNBA.jpg" alt="Logotipo de la NBA"/>
-            <h1>Partidos NBA</h1>
-
-            <table id="navegacion">
-                <tr>
-                    <td class="elemento">Noticias</td>
-                    <td class="elemento">Clasificación</td>
-                    <td class="elemento">Equipos</td>
-                </tr>
-            </table>
+        <header class="borde" id="cabecera">
+            <img id="imagenAvion" src="avion.jpg" alt="Logotipo de la agencia de viajes"/>
+            <h1 id="cabeceraPrincipal">Viajes</h1>
+            <ul id="menuCabecera">
+                <li class="elementoMenu">Viaja</li>
+                <li class="elementoMenu">Tus vuelos</li>
+                <li class="elementoMenu">Antes de viajar</li>
+            </ul>
         </header>
 
-        <aside>
-            <div id="seccionesAuxiliares">
-                <div class="seccion">
-                    Jugadores
-                </div>
-                <div class="seccion">
-                    Equipos
-                </div>
-                <div class="seccion">
-                    Estadísticas
-                </div>
-                <div class="seccion">
-                    Fechas claves
-                </div>
-            </div>
-        </aside>
-
         <section id="principal">
-            <div id="elementosPrincipal">
-                <div>
-                    <img src="partido1" alt="Imagen del partido uno"/>
-                    <h3>Tratd Blazers vs 76ers</h3>
-                </div>
-                <div>
-                    <img src="partido2" alt="Imagen del partido dos"/>
-                    <h3>Suns vs Haws</h3>
-                </div>
-                <div>
-                    <img src="partido3" alt="Imagen del partido tres"/>
-                    <h3>Nets vs Hornets</h3>
-                </div>
-                <div>
-                    <img src="partido4" alt="Imagen del partido cuatro"/>
-                    <h3>Grizzlies vs Cavaliers</h3>
-                </div>
-                <div>
-                    <img src="partido5" alt="Imagen del partido cinco"/>
-                    <h3>Pacers vs Wizards</h3>
-                </div>
-                <div>
-                    <img src="partido6" alt="Imagen del partido seis"/>
-                    <h3>Lakers vs Pelicans</h3>
-                </div>
-                <div>
-                    <img src="partido7" alt="Imagen del partido siete"/>
-                    <h3>Timberwolves vs Bucks</h3>
-                </div>
-                <div>
-                    <img src="partido8" alt="Imagen del partido ocho"/>
-                    <h3>Rockets vs Warriors</h3>
-                </div>
-                <div>
-                    <img src="partido9" alt="Imagen del partido nueve"/>
-                    <h3>Mavericks vs Jazz</h3>
-                </div>
-            </div>
+            <nav class="borde" id="navegacionLateral">
+                <ul id="listaLateral">
+                    <li class="elementoLateral">Check-in</li>
+                    <li class="elementoLateral">Tus reservas</li>
+                    <li class="elementoLateral">Estados vuelos</li>
+                </ul>
+            </nav>
+
+            <section class="borde" id="conjuntoEventos">
+                <div><img class="imagenes" src="paris.jpeg" alt="Viaje hacia París"/><h2 class="ciudad">París</h2></div>
+                <div><img class="imagenes" src="roma.jpg" alt="Viaje hacia Roma"/><h2 class="ciudad">Roma</h2></div>
+                <div><img class="imagenes" src="londres.jpg" alt="Viaje hacia Londres"/><h2 class="ciudad">Londres</h2></div>
+                <div><img class="imagenes" src="cordoba.jpg" alt="Viaje hacia Córdoba"/><h2 class="ciudad">Córdoba</h2></div>
+                <div><img class="imagenes" src="jerez.jpg" alt="Viaje hacia Jerez"/><h2 class="ciudad">Jerez de la Frontera</h2></div>
+                <div><img class="imagenes" src="lisboa.jpg" alt="Viaje hacia Lisboa"/><h2 class="ciudad">Lisboa</h2></div>
+                <div><img class="imagenes" src="losAngeles.jpg" alt="Viaje hacia Los Ángeles"/><h2 class="ciudad">Los Ángeles</h2></div>
+                <div><img class="imagenes" src="madrid.jpg" alt="Viaje hacia Madrid"/><h2 class="ciudad">Madrid</h2></div>
+                <div><img class="imagenes" src="newYork.jpg" alt="Viaje hacia New York"/><h2 class="ciudad">New York</h2></div>
+            </section>
         </section>
 
-        <footer id="pie">
-            <p>&copy; NBA</p>
+        <footer class="borde">
+            <div id="pie">&copy; 2019 SIBW</div>
         </footer>
-
     </body>
 </html>
