--- a/practica1/evento.html
+++ b/practica1/evento.html
@@ -18,7 +18,7 @@
             </ul>
         </header>
 
-        <section id="principal">
+        <main id="principal">
             <nav class="borde" id="navegacionLateral">
                 <ul id="listaLateral">
                     <li class="elementoLateral">Check-in</li>
@@ -38,7 +38,7 @@
                 <h4 class="contenidoDesc" id="fechaEvento">Fecha</h4>
                 <p class="contenidoDesc">Descripción aquí</p>
             </section>
-        </section>
+        </main>
 
         <footer class="borde">
             <div id="pie">&copy; 2019 SIBW</div>
