--- a/practica1/principal.html
+++ b/practica1/principal.html
@@ -18,7 +18,7 @@
             </ul>
         </header>
 
-        <section id="principal">
+        <main id="principal">
             <nav class="borde" id="navegacionLateral">
                 <ul id="listaLateral">
                     <li class="elementoLateral">Check-in</li>
@@ -38,7 +38,7 @@
                 <div><img class="imagenes" src="madrid.jpg" alt="Viaje hacia Madrid"/><h2 class="ciudad">Madrid</h2></div>
                 <div><img class="imagenes" src="newYork.jpg" alt="Viaje hacia New York"/><h2 class="ciudad">New York</h2></div>
             </section>
-        </section>
+        </main>
 
         <footer class="borde">
             <div id="pie">&copy; 2019 SIBW</div>
