Cambios Práctica 1 Pedro

--- a/practica1/principal.html
+++ b/practica1/principal.html
@@ -9,34 +9,38 @@
     </head>
     <body>
         <header class="borde" id="cabecera">
-            <img id="imagenAvion" src="avion.jpg" alt="Logotipo de la agencia de viajes"/>
+            <a href="principal.html"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
             <h1 id="cabeceraPrincipal">Viajes</h1>
-            <ul id="menuCabecera">
-                <li class="elementoMenu">Viaja</li>
-                <li class="elementoMenu">Tus vuelos</li>
-                <li class="elementoMenu">Antes de viajar</li>
-            </ul>
+            <nav>
+                <ul id="menuCabecera">
+                    <li class="elementoMenu">Viaja</li>
+                    <li class="elementoMenu">Tus vuelos</li>
+                    <li class="elementoMenu">Antes de viajar</li>
+                    <li class="elementoMenu"><a href="principal.html">Principal</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main id="principal">
-            <nav class="borde" id="navegacionLateral">
+            <aside class="borde" id="navegacionLateral">
                 <ul id="listaLateral">
                     <li class="elementoLateral">Check-in</li>
                     <li class="elementoLateral">Tus reservas</li>
                     <li class="elementoLateral">Estados vuelos</li>
+                    <li class="elementoLateral"><a href="evento.html">Evento</a></li>
                 </ul>
-            </nav>
+            </aside>
 
             <section class="borde" id="conjuntoEventos">
-                <div><img class="imagenes" src="paris.jpeg" alt="Viaje hacia París"/><h2 class="ciudad">París</h2></div>
-                <div><img class="imagenes" src="roma.jpg" alt="Viaje hacia Roma"/><h2 class="ciudad">Roma</h2></div>
-                <div><img class="imagenes" src="londres.jpg" alt="Viaje hacia Londres"/><h2 class="ciudad">Londres</h2></div>
-                <div><img class="imagenes" src="cordoba.jpg" alt="Viaje hacia Córdoba"/><h2 class="ciudad">Córdoba</h2></div>
-                <div><img class="imagenes" src="jerez.jpg" alt="Viaje hacia Jerez"/><h2 class="ciudad">Jerez de la Frontera</h2></div>
-                <div><img class="imagenes" src="lisboa.jpg" alt="Viaje hacia Lisboa"/><h2 class="ciudad">Lisboa</h2></div>
-                <div><img class="imagenes" src="losAngeles.jpg" alt="Viaje hacia Los Ángeles"/><h2 class="ciudad">Los Ángeles</h2></div>
-                <div><img class="imagenes" src="madrid.jpg" alt="Viaje hacia Madrid"/><h2 class="ciudad">Madrid</h2></div>
-                <div><img class="imagenes" src="newYork.jpg" alt="Viaje hacia New York"/><h2 class="ciudad">New York</h2></div>
+                <div><a href="evento.html"><img class="imagenes" src="img/paris.jpeg" alt="Viaje hacia París"/><p class="ciudad">París</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/roma.jpg" alt="Viaje hacia Roma"/><p class="ciudad">Roma</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/londres.jpg" alt="Viaje hacia Londres"/><p class="ciudad">Londres</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/cordoba.jpg" alt="Viaje hacia Córdoba"/><p class="ciudad">Córdoba</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/jerez.jpg" alt="Viaje hacia Jerez"/><p class="ciudad">Jerez de la Frontera</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/lisboa.jpg" alt="Viaje hacia Lisboa"/><p class="ciudad">Lisboa</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/losAngeles.jpg" alt="Viaje hacia Los Ángeles"/><p class="ciudad">Los Ángeles</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/madrid.jpg" alt="Viaje hacia Madrid"/><p class="ciudad">Madrid</p></a></div>
+                <div><a href="#"><img class="imagenes" src="img/newYork.jpg" alt="Viaje hacia New York"/><p class="ciudad">New York</p></a></div>
             </section>
         </main>
 
