Todo igual pero redistribuido los directorios para que se vea mejor (add css & html directory)

--- a/practica1/html/evento.html
+++ b/practica1/html/evento.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Viajes</title>
-        <link rel="stylesheet" href="./evento.css"/>
-        <link rel="stylesheet" href="./comun.css"/>
+        <link rel="stylesheet" href="../css/evento.css"/>
+        <link rel="stylesheet" href="../css/comun.css"/>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
         <header class="borde" id="cabecera">
-            <a href="principal.html"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
+            <a href="principal.html"><img id="imagenAvion" src="../img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
             <h1 id="cabeceraPrincipal">Viajes</h1>
             <nav>
                 <ul id="menuCabecera">
@@ -32,8 +32,8 @@
             </aside>
             <section class="borde" id="descripcion">
                 <section id="imagenes">
-                    <img class="imagenes" id="imagen1" src="img/fotoEvento1.jpeg" alt="Foto descriptiva número 1"/>
-                    <img class="imagenes" id="imagen2" src="img/fotoEvento2.jpg" alt="Foto descriptiva número 2"/>
+                    <img class="imagenes" id="imagen1" src="../img/fotoEvento1.jpeg" alt="Foto descriptiva número 1"/>
+                    <img class="imagenes" id="imagen2" src="../img/fotoEvento2.jpg" alt="Foto descriptiva número 2"/>
                 </section>
                 <h2 class="contenidoDesc" id="tituloEvento">Título del evento</h2>
                 <dl class="contenidoDesc">
@@ -47,9 +47,9 @@
                 </p>
                 <button>Contactar</button>
                 <article id="redesSocialesEvento">
-                    <a  href="#"><img class="logosRedesSocialesEvento" src="img/fb-logo.jpg"></a>
-                    <a  href="#"><img class="logosRedesSocialesEvento" src="img/tw-logo.jpg"></a>
-                    <a  href="evento_imprimir.html"><img class="logosRedesSocialesEvento" src="img/imprimir-logo.jpg"></a>
+                    <a  href="#"><img class="logosRedesSocialesEvento" src="../img/fb-logo.jpg"></a>
+                    <a  href="#"><img class="logosRedesSocialesEvento" src="../img/tw-logo.jpg"></a>
+                    <a  href="evento_imprimir.html"><img class="logosRedesSocialesEvento" src="../img/imprimir-logo.jpg"></a>
                 </article>
             </section>
         </main>
