--- a/practica1/html/evento.html
+++ b/practica1/html/evento.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
 
-        <main id="principal">
+        <div id="principal">
             <aside class="borde" id="navegacionLateral">
                 <ul id="listaLateral">
                     <li class="elementoLateral">Check-in</li>
@@ -30,7 +30,7 @@
                     <li class="elementoLateral"><a href="evento.html">Evento</a></li>
                 </ul>
             </aside>
-            <section class="borde" id="descripcion">
+            <main class="borde" id="descripcion">
                 <section id="imagenes">
                     <img class="imagenes" id="imagen1" src="../img/fotoEvento1.jpeg" alt="Foto descriptiva número 1"/>
                     <img class="imagenes" id="imagen2" src="../img/fotoEvento2.jpg" alt="Foto descriptiva número 2"/>
@@ -51,8 +51,8 @@
                     <a  href="#"><img class="logosRedesSocialesEvento" src="../img/tw-logo.jpg"></a>
                     <a  href="evento_imprimir.html"><img class="logosRedesSocialesEvento" src="../img/imprimir-logo.jpg"></a>
                 </article>
-            </section>
-        </main>
+            </main>
+        </div>
 
         <footer class="borde">
             <div id="pie">&copy; 2019 SIBW</div>
