--- a/practica1/html/principal.html
+++ b/practica1/html/principal.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
 
-        <main id="principal">
+        <div id="principal">
             <aside class="borde" id="navegacionLateral">
                 <ul id="listaLateral">
                     <li class="elementoLateral">Check-in</li>
@@ -31,7 +31,7 @@
                 </ul>
             </aside>
 
-            <section class="borde" id="conjuntoEventos">
+            <main class="borde" id="conjuntoEventos">
                 <div><a href="evento.html"><img class="imagenes" src="../img/paris.jpeg" alt="Viaje hacia París"/><p class="ciudad">París</p></a></div>
                 <div><a href="#"><img class="imagenes" src="../img/roma.jpg" alt="Viaje hacia Roma"/><p class="ciudad">Roma</p></a></div>
                 <div><a href="#"><img class="imagenes" src="../img/londres.jpg" alt="Viaje hacia Londres"/><p class="ciudad">Londres</p></a></div>
@@ -41,8 +41,8 @@
                 <div><a href="#"><img class="imagenes" src="../img/losAngeles.jpg" alt="Viaje hacia Los Ángeles"/><p class="ciudad">Los Ángeles</p></a></div>
                 <div><a href="#"><img class="imagenes" src="../img/madrid.jpg" alt="Viaje hacia Madrid"/><p class="ciudad">Madrid</p></a></div>
                 <div><a href="#"><img class="imagenes" src="../img/newYork.jpg" alt="Viaje hacia New York"/><p class="ciudad">New York</p></a></div>
-            </section>
-        </main>
+            </main>
+        </div>
 
         <footer class="borde">
             <div id="pie">&copy; 2019 SIBW</div>
