Hecha la práctica 2 a falta de retoques varios

--- a/practica1/evento_imprimir.html
+++ b/practica1/evento_imprimir.html
@@ -3,7 +3,7 @@
     <head>
         <title>Viajes</title>
 
-        <link rel="stylesheet" href="./evento_imprimir.css"/>
+        <link rel="stylesheet" href="css/evento_imprimir.css"/>
 
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -12,8 +12,8 @@
     	<header class="borde">
             <a href="principal.html"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
     	</header>
-    	<main>
-    		<section class="borde" id="descripcion">
+    	<section>
+    		<main class="borde" id="descripcion">
                 <section id="imagenes">
                     <img class="imagenes" id="imagen1" src="img/fotoEvento1.jpeg" alt="Foto descriptiva número 1"/>
                     <img class="imagenes" id="imagen2" src="img/fotoEvento2.jpg" alt="Foto descriptiva número 2"/>
@@ -28,7 +28,7 @@
                 <p class="contenidoDesc">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel lectus cursus, pellentesque lectus vitae, consectetur quam. Pellentesque vulputate diam eu turpis aliquam, vitae viverra risus gravida. Donec nec venenatis libero. Fusce euismod nisi id leo mattis auctor. Nam sit amet dui maximus, pulvinar dolor at, viverra velit. Nullam tincidunt efficitur enim, at consectetur ipsum consectetur condimentum. In aliquam erat sed malesuada ullamcorper. Etiam laoreet justo in arcu posuere blandit. Aenean porttitor ultrices erat, faucibus tristique velit pellentesque vel. Sed bibendum metus a mauris sodales, ut venenatis dolor sodales. Nulla vehicula nisi eleifend, interdum mi et, fermentum quam. Nulla pretium iaculis sapien, quis sollicitudin nibh mattis nec. Donec condimentum elit vulputate mi lacinia aliquet. Nullam nec tristique nunc. Sed congue odio sed turpis viverra, ut ornare nibh blandit. Etiam scelerisque in leo nec condimentum. 
                 </p>
-            </section>
-    	</main>
+            </main>
+    	</section>
    	</body>
 </html>
