Puesto la ruta de directorios como el profesor quería + README

--- a/evento.html
+++ b/evento.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
 
-        <section id="principal">
+        <section id="principalAntes">
             <aside class="borde" id="navegacionLateral">
                 <ul id="listaLateral">
                     <li class="elementoLateral">Check-in</li>
