Ajustada la estética de los comentarios (Fin de la práctica2)

--- a/evento.html
+++ b/evento.html
@@ -63,14 +63,14 @@
 
                 <div id="conjuntoComentarios">
 
-                    <div class="comentario">
+                    <div class="comentarios">
                         <p class="autores" >Autor: Francisco José Cotán López</p>
                         <p class="fechas" >Fecha: 16-07-1996</p>
                         <p class="horas" >Hora: 12:30</p>
                         <p class="textos">Texto: Hola, mi nombre es Fran</p>
                     </div>
 
-                    <div class="comentario">
+                    <div class="comentarios">
                         <p class="autores">Autor: Pedro Luis Fuertes Moreno</p>
                         <p class="fechas">Fecha: x </p>
                         <p class="horas">Hora: 13:00</p>
